[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/PauseMenu.gd" type="Script" id=1]

[node name="PauseMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="Container" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseButton" type="Button" parent="Container"]
modulate = Color( 0.12549, 0.870588, 1, 1 )
margin_right = 53.0
margin_bottom = 20.0
text = "PAUSE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Container"]
anchor_right = 0.975
anchor_bottom = 0.978
margin_right = 32.0
margin_bottom = 15.84
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Container/CenterContainer"]
margin_left = 582.0
margin_top = 329.0
margin_right = 697.0
margin_bottom = 391.0

[node name="Label" type="Label" parent="Container/CenterContainer/VBoxContainer"]
margin_right = 115.0
margin_bottom = 14.0
text = "PAUSE MENU"
align = 1

[node name="ResumeButton" type="Button" parent="Container/CenterContainer/VBoxContainer"]
modulate = Color( 0.258824, 1, 0, 1 )
margin_top = 18.0
margin_right = 115.0
margin_bottom = 38.0
text = "CONTINUAR"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="Container/CenterContainer/VBoxContainer"]
modulate = Color( 1, 0, 0, 1 )
margin_top = 42.0
margin_right = 115.0
margin_bottom = 62.0
text = "FECHAR O JOGO"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Container/PauseButton" to="Container" method="_on_PauseButton_pressed"]
[connection signal="pressed" from="Container/CenterContainer/VBoxContainer/ResumeButton" to="Container" method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="Container/CenterContainer/VBoxContainer/QuitButton" to="Container" method="_on_QuitButton_pressed"]
